[gd_scene load_steps=58 format=3 uid="uid://bj5hrt234asvg"]

[ext_resource type="Script" path="res://scenes/enemies/torch_goblin/torch_goblin.gd" id="1_0q5me"]
[ext_resource type="Texture2D" uid="uid://cglhvp8ik32js" path="res://scenes/enemies/torch_goblin/Torch_Red.png" id="1_mbccc"]
[ext_resource type="Script" path="res://scenes/components/health_component.gd" id="2_gngew"]
[ext_resource type="Script" path="res://scenes/state_machine/state_machine.gd" id="2_vff5u"]
[ext_resource type="Script" path="res://scenes/enemies/torch_goblin/TorchGoblinIdleState.gd" id="3_8xv2y"]
[ext_resource type="Script" path="res://scenes/enemies/torch_goblin/TorchGoblinChaseState.gd" id="4_jaup3"]
[ext_resource type="Script" path="res://scenes/enemies/torch_goblin/TorchGoblinAttackState.gd" id="5_k4efk"]
[ext_resource type="Script" path="res://scenes/enemies/torch_goblin/TorchGoblinWanderState.gd" id="5_k6qka"]
[ext_resource type="Script" path="res://scenes/enemies/torch_goblin/TorchGoblinHurtState.gd" id="6_c7yqf"]
[ext_resource type="Script" path="res://scenes/enemies/torch_goblin/TorchGoblinDiedState.gd" id="7_xqhrw"]
[ext_resource type="Script" path="res://scenes/components/hitbox_component.gd" id="11_rtyay"]
[ext_resource type="Script" path="res://scenes/components/hurt_component.gd" id="12_m2cn7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ufwqa"]
atlas = ExtResource("1_mbccc")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrluy"]
atlas = ExtResource("1_mbccc")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5j4i"]
atlas = ExtResource("1_mbccc")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_15rx0"]
atlas = ExtResource("1_mbccc")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5q03"]
atlas = ExtResource("1_mbccc")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_83k43"]
atlas = ExtResource("1_mbccc")
region = Rect2(960, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ano5h"]
atlas = ExtResource("1_mbccc")
region = Rect2(0, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0011"]
atlas = ExtResource("1_mbccc")
region = Rect2(192, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmhp3"]
atlas = ExtResource("1_mbccc")
region = Rect2(384, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_bukul"]
atlas = ExtResource("1_mbccc")
region = Rect2(576, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhf3o"]
atlas = ExtResource("1_mbccc")
region = Rect2(768, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_43svp"]
atlas = ExtResource("1_mbccc")
region = Rect2(960, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dcrbf"]
atlas = ExtResource("1_mbccc")
region = Rect2(0, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_02o4t"]
atlas = ExtResource("1_mbccc")
region = Rect2(192, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbe11"]
atlas = ExtResource("1_mbccc")
region = Rect2(384, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_bujow"]
atlas = ExtResource("1_mbccc")
region = Rect2(576, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_exygx"]
atlas = ExtResource("1_mbccc")
region = Rect2(768, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ketr0"]
atlas = ExtResource("1_mbccc")
region = Rect2(960, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2whs"]
atlas = ExtResource("1_mbccc")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_315rn"]
atlas = ExtResource("1_mbccc")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygxsd"]
atlas = ExtResource("1_mbccc")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5g5i0"]
atlas = ExtResource("1_mbccc")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_aeg21"]
atlas = ExtResource("1_mbccc")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhnwb"]
atlas = ExtResource("1_mbccc")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6am0"]
atlas = ExtResource("1_mbccc")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydedm"]
atlas = ExtResource("1_mbccc")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ouhkb"]
atlas = ExtResource("1_mbccc")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_aol75"]
atlas = ExtResource("1_mbccc")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_iuuyd"]
atlas = ExtResource("1_mbccc")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_67luw"]
atlas = ExtResource("1_mbccc")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_aff7b"]
atlas = ExtResource("1_mbccc")
region = Rect2(960, 192, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_x3kif"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufwqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrluy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5j4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15rx0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5q03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83k43")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ano5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0011")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmhp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bukul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhf3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43svp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dcrbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02o4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbe11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bujow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exygx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ketr0")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2whs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_315rn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygxsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5g5i0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aeg21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhnwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6am0")
}],
"loop": true,
"name": &"idle",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydedm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouhkb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aol75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iuuyd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67luw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aff7b")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_3anb4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_0so8s"]
resource_name = "attack_down"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_amu5j"]
resource_name = "attack_left"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_k7org"]
resource_name = "attack_right"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_cbpwj"]
resource_name = "attack_up"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_f22cs"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_ktwvx"]
resource_name = "move"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"move"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kuahu"]
_data = {
"RESET": SubResource("Animation_3anb4"),
"attack_down": SubResource("Animation_0so8s"),
"attack_left": SubResource("Animation_amu5j"),
"attack_right": SubResource("Animation_k7org"),
"attack_up": SubResource("Animation_cbpwj"),
"idle": SubResource("Animation_f22cs"),
"move": SubResource("Animation_ktwvx")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lx6i3"]
radius = 19.0
height = 50.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6lvlv"]
radius = 23.0
height = 78.0

[sub_resource type="CircleShape2D" id="CircleShape2D_r8jmp"]
radius = 29.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cetjj"]
radius = 34.0
height = 104.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ffffn"]
radius = 315.002

[node name="TorchGoblin" type="CharacterBody2D"]
script = ExtResource("1_0q5me")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2_gngew")
health = 150

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -33)
sprite_frames = SubResource("SpriteFrames_x3kif")
animation = &"idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kuahu")
}

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_vff5u")
initial_state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="StateMachine" node_paths=PackedStringArray("animation_player", "sprite_2d", "idle_timer", "chase_area")]
script = ExtResource("3_8xv2y")
animation_player = NodePath("../../AnimationPlayer")
sprite_2d = NodePath("../../AnimatedSprite2D")
idle_timer = NodePath("../../IdleTimer")
chase_area = NodePath("../../ChaseArea2D")

[node name="WanderState" type="Node" parent="StateMachine" node_paths=PackedStringArray("animation_player", "wander_timer", "animated_sprite_2d", "health_component", "chase_area")]
script = ExtResource("5_k6qka")
animation_player = NodePath("../../AnimationPlayer")
wander_timer = NodePath("../../WanderTimer")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")
health_component = NodePath("../../HealthComponent")
chase_area = NodePath("../../ChaseArea2D")

[node name="ChaseState" type="Node" parent="StateMachine" node_paths=PackedStringArray("animation_player", "health_component", "animated_sprite_2d", "chase_area")]
script = ExtResource("4_jaup3")
animation_player = NodePath("../../AnimationPlayer")
health_component = NodePath("../../HealthComponent")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")
chase_area = NodePath("../../ChaseArea2D")

[node name="AttackState" type="Node" parent="StateMachine"]
script = ExtResource("5_k4efk")

[node name="HurtState" type="Node" parent="StateMachine"]
script = ExtResource("6_c7yqf")

[node name="DiedState" type="Node" parent="StateMachine"]
script = ExtResource("7_xqhrw")

[node name="PatrolState" type="Node" parent="StateMachine"]

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="WanderTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -36)
shape = SubResource("CapsuleShape2D_lx6i3")

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32
script = ExtResource("11_rtyay")
damage = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(58, -32)
shape = SubResource("CapsuleShape2D_6lvlv")
debug_color = Color(0.996078, 0.0392157, 0, 0.419608)

[node name="HurtComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component", "invincibility_timer")]
collision_layer = 0
collision_mask = 0
script = ExtResource("12_m2cn7")
health_component = NodePath("../HealthComponent")
invincibility_timer = NodePath("Timer")
is_enemy = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
position = Vector2(0, -37)
shape = SubResource("CircleShape2D_r8jmp")
debug_color = Color(0, 0.639216, 0.345098, 0.419608)

[node name="Timer" type="Timer" parent="HurtComponent"]
one_shot = true

[node name="CanAttackArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanAttackArea2D"]
position = Vector2(58, -32)
shape = SubResource("CapsuleShape2D_cetjj")
debug_color = Color(0.623529, 0.533333, 0.0823529, 0.419608)

[node name="ChaseArea2D" type="Area2D" parent="."]
light_mask = 0
visibility_layer = 2
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseArea2D"]
position = Vector2(1, -37)
shape = SubResource("CircleShape2D_ffffn")
debug_color = Color(0.694118, 0.494118, 0, 0.419608)
